--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
   <body>
     <div id="app">
       <div id="flora">
-      <div id="floraGrid" class="grid-container"></div>
-      <div id="floraDetails" class="flora-details"></div>
+        <div id="floraGrid" class="grid-container"></div>
+        <div id="floraDetails" class="flora-details"></div>
+      </div>
     </div>
-    </div>
-    <div id="effects"
+    <div id="effects">
       <div id="effectSearchContainer">
-        <input type="text" id="effectSearchInput" placeholder="Search effects...">
+        <input
+          type="text"
+          id="effectSearchInput"
+          placeholder="Search effects..."
+        />
         <ul id="effectList"></ul>
       </div>
-      <div id="effectDetails" class="effect-details"></div> <!-- This will contain the grid of images -->
-    </div>
-    
+      <div id="effectDetails" class="effect-details"></div>
     </div>
     <script type="module" src="dist/app.js"></script>
   </body>
